# opencascade-rs

./: .clang-format  .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix  run.sh
.github/workflows/: clangfmt.yml  clippy.yml  occt.yml  rustfmt.yml  test.yml
crates/binding-generator/: Cargo.toml  README.md
crates/binding-generator/examples/: simple_binding.rs
crates/binding-generator/src/: lib.rs  queries.rs
crates/kicad/: Cargo.toml
crates/kicad-parser/: Cargo.toml
crates/kicad-parser/sample-files/: sample.kicad_pcb
crates/kicad-parser/src/: board.rs  graphics.rs  lib.rs  main.rs  writer.rs
crates/kicad/src/: kicad.rs  kicad_sexp.rs  main.rs
crates/model/: Cargo.toml
crates/model-api/: Cargo.toml
crates/model-api/src/: angle.rs  lib.rs  primitives.rs  wasm.rs  workplane.rs
crates/model-api/src/primitives/: boolean_shape.rs  compound.rs  edge.rs  face.rs  shape.rs  shell.rs  solid.rs  wire.rs
crates/model-api/wit/: model-api.wit
crates/model/src/: lib.rs
crates/occt-sys/: Cargo.toml  build.rs
crates/occt-sys/examples/: print_paths.rs
crates/occt-sys/patch/adm/: MODULES  RESOURCES
crates/occt-sys/patch/src/StdPrs/: FILES  Prs3d.hxx
crates/occt-sys/patch/src/TKSTL/: EXTERNLIB
crates/occt-sys/patch/src/TKV3d/: EXTERNLIB  PACKAGES
crates/occt-sys/src/: lib.rs
crates/opencascade/: Cargo.toml
crates/opencascade-sys/: Cargo.toml  build.rs
crates/opencascade-sys/OCCT/: CMakeLists.txt
crates/opencascade-sys/cpp/: wrapper.cpp
crates/opencascade-sys/examples/: bottle.rs  simple.rs
crates/opencascade-sys/include/: b_rep.hxx  b_rep_adaptor.hxx  b_rep_algo_api.hxx  b_rep_bnd_lib.hxx  b_rep_builder_api.hxx  b_rep_feat.hxx  b_rep_fillet_api.hxx  b_rep_g_prop.hxx  b_rep_int_curve_surface.hxx  b_rep_lib.hxx  b_rep_mesh.hxx  b_rep_offset_api.hxx  b_rep_prim_api.hxx  b_rep_tools.hxx  bin_tools.hxx  bindings_common.hxx  bnd.hxx  bop_algo.hxx  g_prop.hxx  gc.hxx  gc_pnts.hxx  geom.hxx  geom2d.hxx  geom_abs.hxx  geom_api.hxx  gp.hxx  if_select.hxx  iges_control.hxx  law.hxx  message.hxx  poly.hxx  shape_analysis.hxx  shape_upgrade.hxx  standard.hxx  step_control.hxx  stl_api.hxx  t_col_gp.hxx  top_abs.hxx  top_exp.hxx  top_loc.hxx  (+3 more)
crates/opencascade-sys/src/: b_rep.rs  b_rep_adaptor.rs  b_rep_algo_api.rs  b_rep_bnd_lib.rs  b_rep_builder_api.rs  b_rep_feat.rs  b_rep_fillet_api.rs  b_rep_g_prop.rs  b_rep_int_curve_surface.rs  b_rep_lib.rs  b_rep_mesh.rs  b_rep_offset_api.rs  b_rep_prim_api.rs  b_rep_tools.rs  bin_tools.rs  bnd.rs  bop_algo.rs  export.rs  g_prop.rs  gc.rs  gc_pnts.rs  geom.rs  geom2d.rs  geom_abs.rs  geom_api.rs  gp.rs  if_select.rs  iges_control.rs  law.rs  lib.rs  main.rs  message.rs  poly.rs  shape_analysis.rs  shape_upgrade.rs  standard.rs  step_control.rs  stl_api.rs  t_col_gp.rs  top_abs.rs  (+4 more)
crates/opencascade-sys/tests/: triangulation.rs
crates/opencascade/examples/: bowl.rs  box.rs  chamfer.rs  flywheel.rs  high_level.rs  high_level_bottle.rs  keyboard_case.rs  keycap.rs  rounded_chamfer.rs
crates/opencascade/src/: adhoc.rs  angle.rs  bounding_box.rs  geometry.rs  kicad.rs  law_function.rs  lib.rs  make_pipe_shell.rs  mesh.rs  primitives.rs  section.rs  tdf.rs  text.rs  transform.rs  workplane.rs
crates/opencascade/src/primitives/: boolean_shape.rs  compound.rs  edge.rs  face.rs  shape.rs  shell.rs  solid.rs  surface.rs  vertex.rs  wire.rs
crates/viewer/: Cargo.toml  build.rs
crates/viewer/models/: nist_ftc_06.step
crates/viewer/shaders/: clipping_plane.wgsl  edge.wgsl  surface.wgsl
crates/viewer/src/: camera.rs  clipping_plane.rs  edge_drawer.rs  main.rs  surface_drawer.rs  wasm_engine.rs
crates/wasm-api/: Cargo.toml
crates/wasm-api/src/: lib.rs
crates/wasm-example/: Cargo.toml  README.md
crates/wasm-example/src/: box_shape.rs  lib.rs  rounded_chamfer.rs
docs/: writing_bindings.md
examples/: Cargo.toml
examples/src/: airfoil.rs  amp_case.rs  bounding_box.rs  bowl.rs  box_shape.rs  cable_bracket.rs  chamfer.rs  flat_ethernet_bracket.rs  flywheel.rs  gizmo.rs  heater_coil.rs  high_level_bottle.rs  keyboard_case.rs  keycap.rs  letter_a.rs  letter_e.rs  lib.rs  offset_2d.rs  pentafoil.rs  pipe.rs  rounded_chamfer.rs  save_step.rs  section.rs  simple.rs  swept_face.rs  swept_face_variable.rs  swept_wire.rs  swept_wire_variable.rs  thumbtack_mount.rs  turners_cube.rs  variable_fillet.rs  write_model.rs  zbox_case.rs
