[package]
name = "kicad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.12", features = ["derive"] }
kicad_files = { git = "https://github.com/kicad-rs/kicad_files.git", version = "0.0.0" }
serde = "1.0.171"
serde_kicad_sexpr = "0.1.0"
# lexpr = "0.2.6"
lexpr = { git = 'https://github.com/tachiniererin/lexpr-rs', branch = 'kicad_pcb-sexp' }

# [patch.crates-io]
# lexpr = { git = 'https://github.com/tachiniererin/lexpr-rs', branch = 'kicad_pcb-sexp' }
