[package]
name = "occt-sys"
description = "Static build of the C++ OpenCascade CAD Kernel for use as a Rust dependency"
authors = ["Brian Schwind <brianmschwind@gmail.com>", "Matěj Laitl <matej@laitl.cz>"]
license = "LGPL-2.1"
version = "0.4.0"
edition = "2021"
repository = "https://github.com/bschwind/opencascade-rs"

# Desperately trying to reduce the crate size here...
# Sorted by file size
exclude = [
    "OCCT/data/*",
    "OCCT/dox/*",
    "OCCT/tests/*",
    "OCCT/samples/*",
    "OCCT/tools/*",

    "OCCT/src/Textures/*",
    "OCCT/src/OpenGl/*",
    # "OCCT/src/AppCont/*",
    # "OCCT/src/AdvApp2Var/*",
    # "OCCT/src/Resource/*",
    "OCCT/src/Graphic3d/*",
    # "OCCT/src/TopOpeBRepBuild/*",
    # "OCCT/src/IntPatch/*",
    "OCCT/src/AIS/*",
    "OCCT/src/ViewerTest/*",
    # "OCCT/src/ChFi3d/*",
    # "OCCT/src/BOPAlgo/*",
    # "OCCT/src/BRepFill/*",
    # "OCCT/src/ShapeFix/*",
    # "OCCT/src/Geom/*",
    # "OCCT/src/BRepOffset/*",
    # "OCCT/src/IFSelect/*",
    # "OCCT/src/RWStepAP214/*",
    # "OCCT/src/GeomFill/*",
    "OCCT/src/QABugs/*",
    "OCCT/src/HLRBRep/*",
    # "OCCT/src/math/*",
    # "OCCT/src/PLib/*",
    # "OCCT/src/Extrema/*",
    # "OCCT/src/TopOpeBRepDS/*",
    # "OCCT/src/TopOpeBRep/*",
    # "OCCT/src/RWStepKinematics/*",
    "OCCT/src/XCAFDoc/*",
    # "OCCT/src/TopOpeBRepTool/*",
    # "OCCT/src/gp/*",
    # "OCCT/src/StepBasic/*",
    "OCCT/src/PrsDim/*",
    # "OCCT/src/BRepMesh/*",
    # "OCCT/src/RWStepBasic/*",
    # "OCCT/src/OSD/*",
    # "OCCT/src/Geom2dGcc/*",
    # "OCCT/src/Standard/*",
    # "OCCT/src/Interface/*",
    # "OCCT/src/StepKinematics/*",
    "OCCT/src/SelectMgr/*",
    # "OCCT/src/IntTools/*",
    # "OCCT/src/ShapeAnalysis/*",
    # "OCCT/src/NCollection/*",
    # "OCCT/src/RWStepGeom/*",
    # "OCCT/src/ShapeUpgrade/*",
    "OCCT/src/IGESGeom/*",
    "OCCT/src/Draw/*",
    "OCCT/src/STEPCAFControl/*",
    # "OCCT/src/GccAna/*",
    "OCCT/src/IGESData/*",
    "OCCT/src/TDataStd/*",
    # "OCCT/src/BRepBlend/*",
    "OCCT/src/IGESDimen/*",
    # "OCCT/src/RWStepShape/*",
    "OCCT/src/TNaming/*",
    # "OCCT/src/BRepFeat/*",
    "OCCT/src/BrepBuilderAPI/*",
    "OCCT/src/IGESSolid/*",
    "OCCT/src/BRepTest/*",
    # "OCCT/src/BlendFunc/*",
    # "OCCT/src/LocOpe/*",
    # "OCCT/src/StepVisual/*",
    # "OCCT/src/StepGeom/*",
    # "OCCT/src/StepData/*",
    "OCCT/src/MeshVS/*",
    # "OCCT/src/StepShape/*",
    # "OCCT/src/ProjLib/*",
    "OCCT/src/XDEDRAW/*",
    # "OCCT/src/RWStepVisual/*",
    # "OCCT/src/StepAP214/*",
    "OCCT/src/BrepLib/*",
    # "OCCT/src/RWStepDimTol/*",
    # "OCCT/src/RWStepRepr/*",
    "OCCT/src/IGESAppli/*",
    # "OCCT/src/Geom2d/*",
    "OCCT/src/IGESDraw/*",
    # "OCCT/src/AppDef/*",
    "OCCT/src/TDF/*",
    # "OCCT/src/StepRepr/*",
    # "OCCT/src/Expr/*",
    "OCCT/src/IGESToBRep/*",
    "OCCT/src/BSplClib/*",
    "OCCT/src/V3d/*",
    # "OCCT/src/BRepTools/*",
    # "OCCT/src/GeomInt/*",
    # "OCCT/src/StepFEA/*",
    # "OCCT/src/IntCurve/*",
    # "OCCT/src/StdPrs/*",
    # "OCCT/src/RWStepFEA/*",
    "OCCT/src/IGESSelect/*",
    # "OCCT/src/Approx/*",
    "OCCT/src/VrmlData/*",
    # "OCCT/src/Transfer/*",
    "OCCT/src/DNaming/*",
    "OCCT/src/RWGltf/*",
    # "OCCT/src/BRep/*",
    "OCCT/src/Shaders/*",
    # "OCCT/src/XSControl/*",
    "OCCT/src/Select3D/*",
    # "OCCT/src/StepDimTol/*",
    # "OCCT/src/STEPConstruct/*",
    "OCCT/src/TObj/*",
    "OCCT/src/DDataStd/*",
    "OCCT/src/Prs3d/*",
    "OCCT/src/Font/*",
    "OCCT/src/IGESBasic/*",
    # "OCCT/src/BOPDS/*",
    "OCCT/src/DsgPrs/*",
    # "OCCT/src/Poly/*",
    # "OCCT/src/Message/*",
    # "OCCT/src/BOPTools/*",
    "OCCT/src/DrawResources/*",
    # "OCCT/src/BRepOffsetAPI/*",
    # "OCCT/src/IntWalk/*",
    "OCCT/src/BOPTest/*",
    "OCCT/src/IGESGraph/*",
    # "OCCT/src/Bnd/*",
    # "OCCT/src/Bisector/*",
    # "OCCT/src/BRepGProp/*",
    # "OCCT/src/IntPolyh/*",
    "OCCT/src/Aspect/*",
    # "OCCT/src/StepToTopoDS/*",
    # "OCCT/src/BinTools/*",
    "OCCT/src/LDOM/*",
    # "OCCT/src/StepElement/*",
    "OCCT/src/ShapePersistent/*",
    # "OCCT/src/GeomConvert/*",
    # "OCCT/src/IntAna/*",
    "OCCT/src/Contap/*",
    # "OCCT/src/BRepCheck/*",
    # "OCCT/src/MAT2d/*",
    "OCCT/src/ExpToCasExe/*",
    # "OCCT/src/STEPControl/*",
    # "OCCT/src/GeomPlate/*",
    # "OCCT/src/IntCurveSurface/*",
    # "OCCT/src/GeomLib/*",
    # "OCCT/src/BRepExtrema/*",
    # "OCCT/src/Units/*",
    # "OCCT/src/BRepApprox/*",
    "OCCT/src/XmlMDataStd/*",
    # "OCCT/src/BVH/*",
    # "OCCT/src/ShapeCustom/*",
    "OCCT/src/Vrml/*",
    # "OCCT/src/GeomAPI/*",
    # "OCCT/src/ChFiDS/*",
    # "OCCT/src/Adaptor3d/*",
    "OCCT/src/DrawTrSurf/*",
    # "OCCT/src/TCollection/*",
    # "OCCT/src/GCPnts/*",
    # "OCCT/src/Convert/*",
    "OCCT/src/Express/*",
    "OCCT/src/TDocStd/*",
    # "OCCT/src/Blend/*",
    "OCCT/src/HLRAlgo/*",
    "OCCT/src/Image/*",
    # "OCCT/src/AppParCurves/*",
    # "OCCT/src/ExprIntrp/*",
    "OCCT/src/IGESDefs/*",
    # "OCCT/src/Law/*",
    "OCCT/src/QANCollection/*",
    # "OCCT/src/GeomToStep/*",
    # "OCCT/src/Quantity/*",
    # "OCCT/src/StepFile/*",
    "OCCT/src/GeometryTest/*",
    # "OCCT/src/Intf/*",
    # "OCCT/src/ChFiKPart/*",
    "OCCT/src/SWDRAW/*",
    "OCCT/src/TPrsStd/*",
    # "OCCT/src/ChFi2d/*",
    "OCCT/src/TDataXtd/*",
    # "OCCT/src/TopoDSToStep/*",
    # "OCCT/src/GeomAdaptor/*",
    # "OCCT/src/BSplSLib/*",
    # "OCCT/src/gce/*",
    "OCCT/src/GeomliteTest/*",
    "OCCT/src/DBRep/*",
    # "OCCT/src/FairCurve/*",
    # "OCCT/src/ShapeConstruct/*",
    # "OCCT/src/FSD/*",
    # "OCCT/src/MoniTool/*",
    # "OCCT/src/BRepPrim/*",
    # "OCCT/src/UnitsAPI/*",
    # "OCCT/src/Storage/*",
    "OCCT/src/BinMDataStd/*",
    "OCCT/src/VrmlConverter/*",
    # "OCCT/src/BndLib/*",
    # "OCCT/src/Plate/*",
    # "OCCT/src/BRepSweep/*",
    # "OCCT/src/TColStd/*",
    # "OCCT/src/BRepAlgo/*",
    # "OCCT/src/ApproxInt/*",
    # "OCCT/src/Draft/*",
    # "OCCT/src/StepAP203/*",
    # "OCCT/src/Geom2dHatch/*",
    # "OCCT/src/BiTgte/*",
    # "OCCT/src/ShapeExtend/*",
    "OCCT/src/RWObj/*",
    # "OCCT/src/TopoDS/*",
    # "OCCT/src/BRepPrimAPI/*",
    # "OCCT/src/MAT/*",
    "OCCT/src/PrsMgr/*",
    "OCCT/src/TFunction/*",
    "OCCT/src/XCAFDimTolObjects/*",
    "OCCT/src/IVtkDraw/*",
    "OCCT/src/XSDRAWSTLVRML/*",
    # "OCCT/src/GC/*",
    "OCCT/src/XmlMXCAFDoc/*",
    # "OCCT/src/Geom2dConvert/*",
    # "OCCT/src/TopTools/*",
    # "OCCT/src/BRepAlgoAPI/*",
    # "OCCT/src/BRepClass3d/*",
    "OCCT/src/GeomToIGES/*",
    "OCCT/src/RWMesh/*",
    # "OCCT/src/RWStepElement/*",
    "OCCT/src/CDM/*",
    # "OCCT/src/StepToGeom/*",
    "OCCT/src/MeshTest/*",
    # "OCCT/src/GeomTools/*",
    # "OCCT/src/XSMessage/*",
    # "OCCT/src/ShapeProcess/*",
    # "OCCT/src/Geom2dInt/*",
    "OCCT/src/PCDM/*",
    # "OCCT/src/BRepFilletAPI/*",
    # "OCCT/src/Geom2dAPI/*",
    # "OCCT/src/FEmTool/*",
    "OCCT/src/Media/*",
    # "OCCT/src/GProp/*",
    "OCCT/src/BinMXCAFDoc/*",
    "OCCT/src/HLRTopoBRep/*",
    "OCCT/src/StdLPersistent/*",
    "OCCT/src/CDF/*",
    # "OCCT/src/IntSurf/*",
    "OCCT/src/StdSelect/*",
    # "OCCT/src/GeomEvaluator/*",
    "OCCT/src/DDocStd/*",
    "OCCT/src/DE/*",
    "OCCT/src/IGESControl/*",
    # "OCCT/src/AdvApprox/*",
    # "OCCT/src/TransferBRep/*",
    # "OCCT/src/ElCLib/*",
    "OCCT/src/XCAFPrs/*",
    # "OCCT/src/BRepAdaptor/*",
    "OCCT/src/IVtkTools/*",
    # "OCCT/src/GCE2d/*",
    # "OCCT/src/ElSLib/*",
    "OCCT/src/BinObjMgt/*",
    "OCCT/src/DDF/*",
    "OCCT/src/BRepToIGES/*",
    # "OCCT/src/StepAP209/*",
    "OCCT/src/BinLDrivers/*",
    # "OCCT/src/RWStepAP203/*",
    # "OCCT/src/STEPSelections/*",
    "OCCT/src/WNT/*",
    "OCCT/src/StdStorage/*",
    "OCCT/src/DrawDim/*",
    "OCCT/src/IVtkOCC/*",
    # "OCCT/src/BRepTopAdaptor/*",
    "OCCT/src/XmlMDataXtd/*",
    # "OCCT/src/BRepClass/*",
    # "OCCT/src/IntAna2d/*",
    # "OCCT/src/IntRes2d/*",
    "OCCT/src/HLRTest/*",
    # "OCCT/src/BRepMAT2d/*",
    "OCCT/src/RWPly/*",
    # "OCCT/src/IFGraph/*",
    # "OCCT/src/Adaptor2d/*",
    # "OCCT/src/LocalAnalysis/*",
    # "OCCT/src/CPnts/*",
    # "OCCT/src/FilletSurf/*",
    # "OCCT/src/TColgp/*",
    "OCCT/src/XmlLDrivers/*",
    # "OCCT/src/IntStart/*",
    # "OCCT/src/ShapeBuild/*",
    "OCCT/src/QADNaming/*",
    "OCCT/src/XmlObjMgt/*",
    "OCCT/src/D3DHost/*",
    "OCCT/src/XmlMDF/*",
    "OCCT/src/IGESCAFControl/*",
    # "OCCT/src/HatchGen/*",
    "OCCT/src/XmlMNaming/*",
    # "OCCT/src/NLPlate/*",
    "OCCT/src/XmlTObjDrivers/*",
    # "OCCT/src/IntImp/*",
    # "OCCT/src/Geom2dAdaptor/*",
    "OCCT/src/BinMDataXtd/*",
    "OCCT/src/StdPersistent/*",
    # "OCCT/src/BRepBndLib/*",
    "OCCT/src/BinTObjDrivers/*",
    # "OCCT/src/CSLib/*",
    # "OCCT/src/IntImpParGen/*",
    # "OCCT/src/IMeshData/*",
    # "OCCT/src/IntCurvesFace/*",
    "OCCT/src/Intrv/*",
    # "OCCT/src/AppBlend/*",
    # "OCCT/src/TopLoc/*",
    "OCCT/src/IGESFile/*",
    # "OCCT/src/IMeshTools/*",
    "OCCT/src/XmlOcafResource/*",
    # "OCCT/src/RWStl/*",
    # "OCCT/src/StepSelect/*",
    "OCCT/src/BinMDF/*",
    # "OCCT/src/BRepMeshData/*",
    "OCCT/src/IGESConvGeom/*",
    "OCCT/src/BinMNaming/*",
    # "OCCT/src/Hermit/*",
    # "OCCT/src/LProp/*",
    # "OCCT/src/Geom2dLProp/*",
    # "OCCT/src/TopTrans/*",
    # "OCCT/src/StepAP242/*",
    # "OCCT/src/ShapeAlgo/*",
    "OCCT/src/BRepToIGESBRep/*",
    # "OCCT/src/RWHeaderSection/*",
    # "OCCT/src/XSAlgo/*",
    "OCCT/src/Wasm/*",
    "OCCT/src/DPrsStd/*",
    # "OCCT/src/TopClass/*",
    # "OCCT/src/APIHeaderSection/*",
    "OCCT/src/OpenGlTest/*",
    "OCCT/src/StdObject/*",
    # "OCCT/src/BRepLProp/*",
    # "OCCT/src/GeomLProp/*",
    "OCCT/src/DEBRepCascade/*",
    "OCCT/src/DEXCAFCascade/*",
    "OCCT/src/StdObjMgt/*",
    "OCCT/src/XmlMFunction/*",
    "OCCT/src/XSDRAWIGES/*",
    "OCCT/src/Xw/*",
    # "OCCT/src/TopExp/*",
    # "OCCT/src/Hatch/*",
    "OCCT/src/XSDRAW/*",
    # "OCCT/src/Geom2dEvaluator/*",
    "OCCT/src/IVtk/*",
    "OCCT/src/Cocoa/*",
    # "OCCT/src/LProp3d/*",
    "OCCT/src/VrmlAPI/*",
    "OCCT/src/IVtkVTK/*",
    "OCCT/src/BinDrivers/*",
    # "OCCT/src/GccInt/*",
    # "OCCT/src/RWStepAP242/*",
    # "OCCT/src/GccEnt/*",
    "OCCT/src/XSDRAWSTEP/*",
    # "OCCT/src/Sweep/*",
    "OCCT/src/BinMFunction/*",
    # "OCCT/src/HeaderSection/*",
    "OCCT/src/SelectBasics/*",
    "OCCT/src/Geom2dToIGES/*",
    # "OCCT/src/STEPEdit/*",
    "OCCT/src/TObjDRAW/*",
    # "OCCT/src/SHMessage/*",
    "OCCT/src/OS/*",
    # "OCCT/src/Precision/*",
    # "OCCT/src/TopAbs/*",
    "OCCT/src/StdLDrivers/*",
    # "OCCT/src/GeomProjLib/*",
    # "OCCT/src/TColGeom/*",
    "OCCT/src/DRAWEXE/*",
    "OCCT/src/XRResources/*",
    "OCCT/src/XmlDrivers/*",
    # "OCCT/src/StlAPI/*",
    # "OCCT/src/BRepIntCurveSurface/*",
    # "OCCT/src/BRepProj/*",
    # "OCCT/src/UnitsMethods/*",
    "OCCT/src/XmlXCAFDrivers/*",
    # "OCCT/src/TColGeom2d/*",
    "OCCT/src/TopBas/*",
    "OCCT/src/BinXCAFDrivers/*",
    "OCCT/src/DrawFairCurve/*",
    # "OCCT/src/Plugin/*",
    # "OCCT/src/ShapeProcessAPI/*",
    "OCCT/src/XmlMDocStd/*",
    # "OCCT/src/LibCtl/*",
    "OCCT/src/XCAFView/*",
    "OCCT/src/UTL/*",
    # "OCCT/src/GeomAbs/*",
    "OCCT/src/QADraw/*",
    "OCCT/src/BinMDocStd/*",
    # "OCCT/src/StdFail/*",
    # "OCCT/src/BRepPreviewAPI/*",
    "OCCT/src/TopCnx/*",
    "OCCT/src/HLRAppli/*",
    "OCCT/src/StdDrivers/*",
    "OCCT/src/XCAFNoteObjects/*",
    "OCCT/src/StdResource/*",
    # "OCCT/src/TShort/*",
    "OCCT/src/XCAFApp/*",
    "OCCT/src/XSTEPResource/*",
    "OCCT/src/AppStd/*",
    "OCCT/src/AppStdL/*",
    # "OCCT/src/XBRepMesh/*",
    "OCCT/src/D3DHostTest/*",
]

[dependencies]

[build-dependencies]
cmake = "0.1"

# Adding an empty workspace table so occt-sys doesn't believe
# it's in the parent workspace. This crate is excluded from
# the top-level workspace because it takes quite awhile to
# build and the crate doesn't change very often.
[workspace]
