[package]
name = "occt-sys"
description = "Static build of the C++ OpenCascade CAD Kernel for use as a Rust dependency"
authors = ["Brian Schwind <brianmschwind@gmail.com>", "Matěj Laitl <matej@laitl.cz>"]
license = "LGPL-2.1"
version = "0.5.1"
edition = "2021"
repository = "https://github.com/bschwind/opencascade-rs"

# Reduce the crate size so we can publish on crates.io.
# Sorted by file size
exclude = [
    "OCCT/data/*",
    "OCCT/dox/*",
    "OCCT/tests/*",
    "OCCT/samples/*",
    "OCCT/tools/*",
    "OCCT/src/Textures/*",
    "OCCT/src/OpenGl/*",
    "OCCT/src/ViewerTest/*",
    "OCCT/src/QABugs/*",
]

[dependencies]

[build-dependencies]
cmake = "0.1"

# Adding an empty workspace table so occt-sys doesn't believe
# it's in the parent workspace. This crate is excluded from
# the top-level workspace because it takes quite awhile to
# build and the crate doesn't change very often.
[workspace]
