[package]
name = "occt-sys"
description = "Static build of the C++ OpenCascade CAD Kernel for use as a Rust dependency"
authors = ["Brian Schwind <brianmschwind@gmail.com>", "Matěj Laitl <matej@laitl.cz>"]
license = "LGPL-2.1"
version = "0.6.0"
edition = "2021"
repository = "https://github.com/bschwind/opencascade-rs"

# Reduce the crate size so we can publish on crates.io.
# Sorted by file size
exclude = [
    "OCCT/data/*",
    "OCCT/dox/*",
    "OCCT/tests/*",
    "OCCT/samples/*",
    "OCCT/tools/*",
    "OCCT/src/Textures/*",
    "OCCT/src/OpenGl/*",
    "OCCT/src/ViewerTest/*",
    "OCCT/src/QABugs/*",
]

[dependencies]
cmake = "0.1"
