[package]
name = "viewer"
version = "0.2.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4.3.19", features = ["derive"] }
examples = { path = "../../examples" }
glam = { version = "0.23", features = ["bytemuck"] }
opencascade = { version = "0.2", path = "../opencascade" }
simple-game = { git = "https://github.com/bschwind/simple-game.git" }
smaa = "0.10"
wgpu = "0.16"
winit = "0.28"

[build-dependencies]
naga = { version = "0.12", features = ["validate", "wgsl-in"] }
