[package]
name = "viewer"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
examples = { path = "../../examples", default-features = false }
glam = { version = "0.24", features = ["bytemuck"] }
kicad-parser = { path = "../kicad-parser" }
opencascade = { version = "0.2", path = "../opencascade", default-features = false }
simple-game = { git = "https://github.com/bschwind/simple-game.git", rev = "651a57a9f28b0707afbb5a43fe1cbc8f6755169c", default-features = false }
smaa = "0.12"
wasmtime = "20"
wgpu = "0.18"
winit = { version = "0.29", features = ["rwh_05"] }

[build-dependencies]
naga = { version = "0.14", features = ["validate", "wgsl-in"] }

[features]
default = ["builtin"]
builtin = ["opencascade/builtin", "examples/builtin"]
