[package]
name = "viewer"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
examples = { path = "../../examples", default-features = false }
glam = { version = "0.24", features = ["bytemuck"] }
kicad-parser = { path = "../kicad-parser" }
notify = "6"
opencascade = { version = "0.2", path = "../opencascade", default-features = false }
simple-game = { git = "https://github.com/bschwind/simple-game.git", rev = "3bd52ba7c64f1bd0c79066c6a73f61df15889745" }
smaa = "0.15"
wasmtime = "20"
wgpu = "22"
winit = { version = "0.29", features = ["rwh_05"] }
wit-component = { version = "0.209", default-features = false }

[build-dependencies]
naga = { version = "0.14", features = ["validate", "wgsl-in"] }

[features]
default = ["builtin"]
builtin = ["opencascade/builtin", "examples/builtin"]
